--- a/templates/daekcenter/css/style.css
+++ b/templates/daekcenter/css/style.css
@@ -110,7 +110,7 @@ a:hover, a:focus, a:active {color: #cc3325;}
 
 
 .template {background: #edeeef; padding: 30px; margin-bottom: 20px;}
-.item-departments {background: #fff; padding: 10px 20px 20px 20px; width: 49.4%; margin-right: 10px; margin-bottom: 10px;}
+.item-departments {background: #fff; padding: 10px 20px 20px 20px; width: 48.4%; margin-right: 10px; margin-bottom: 10px; float:left;}
 .item-departments h5 {margin-top: 0; margin-bottom: 5px;}
 .item-departments p {color: #646464;}
 .item-departments .link {margin-bottom: 0; margin-top: 15px;}
@@ -140,5 +140,5 @@ ul.nav-left > li:hover > a::before {color: #d23028;}
 .table3 tr td, .table3 thead tr th {border: 2px solid #000 !important;}
 .btnCredit {text-transform: uppercase; font-size: 18px; font-weight: bold; padding-right: 30px; padding-left: 30px; margin-top: 20px; margin-right: 10px;}
 .credit h3 {text-transform: uppercase; text-decoration: underline; font-size: 18px; color: #cd0404;}
-
+.col-md-6 h3{margin:0;}
 
