--- a/templates/daekcenter/css/style.css
+++ b/templates/daekcenter/css/style.css
@@ -149,3 +149,13 @@ ul.nav-left > li:hover > a::before {color: #d23028;}
     width: 100%;
 }
 #gf_search_rad_btn{margin-left:13px;}
+#gf_list_MS_JC_id_1{
+	width:100% !important;
+	height: 283px !important;
+	max-height:283px !important;
+	overflow:hidden !important;
+	border: none !important;
+}
+#gf_list_MS_JC_id_1 h3 { color: #000;font-weight: bold; margin-top: 12px; margin-bottom:0px;}
+.gf-sidelist-heading{display:none;}
+.head-tt{margin-bottom:0px;}
